# distributed-inference-vllm

./: CONTRIBUTING.md  README.md  README_DeepSeekR1-0528.md  README_DeepSeekR1.md  README_Llama3.1.md  requirements.txt
envs/: README.md
envs/uv/u260304_vllm/: README.md  check_nccl_status.py  nccl_and_multi_gpu.md  pyproject.toml  requirements-frozen.txt  setup.sh  test_vllm_inference.py  test_vllm_installation.py
envs/uv/u260423_vllm_compiled/: README.md  pyproject.toml  requirements-frozen.txt  setup.sh  test_vllm_inference.py  test_vllm_installation.py
examples/workshop/: 70b_offline.sh  70b_slurm.sh  inference.ipynb  offline.py  offline_input.json
figures/ai/: distributed_inference_readme.ai
offline-example/: batch_inf_offline_dist.py  offline_70b.slrm  prompt.txt  sample_response_output.txt
scripts/: batch_prompt_sender.py  input_prompts.json  output_responses.json
scripts/generate_figures/: generate_fig_2.py
server/: 405b_slurm.sh  70b_slurm.sh  deepseek_r1_h100_slurm.sh  deepseek_r1_h200_slurm.sh
workflows/: README.md
workflows/DeepSeek-R1-0528_multinode-server/: README.md  deepseek_r1_0528_h100_slurm.sh  deepseek_r1_0528_h200_slurm.sh
workflows/DeepSeek-R1_multinode-server/: README.md  deepseek_r1_h100_slurm.sh  generate_fig_1.py
workflows/Llama-3.1-405B_multinode-server/: README.md
workflows/Llama-3.1-70B_multinode-server/: README.md
workflows/Meta-Llama-3.1-405B-Instruct-FP8_multinode-server/: README.md  batch_processing_100.py  init_cluster.sh  setup_vllm_server_h100.sh  setup_vllm_server_h200.sh
workshops/w260326/: README.md  (+4 more)
(+20 files in other folders)
