[project]
name = "inference-env"
version = "0.1.0"
description = "vLLM inference environment"
requires-python = ">=3.12"
dependencies = [
    "ray==2.54.0",
    "vllm==0.11.2",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"

[tool.uv.pip]
index-strategy = "unsafe-best-match"
